Border around app

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <button id="medium" class="difficulty-button">Medium</button>
             <button id="hard" class="difficulty-button">Hard</button>
         </div>
-        <div id="sudoku-grid"></div>
+        <div id="grid-outline">
+            <div id="sudoku-grid"></div>
+        </div>
     </div>
     <script src="scripts/main.js"></script>
 </body>
